header menu problem

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,4 +1,10 @@
 .events {
+  &--item {
+    @include onDesktop {
+      margin-bottom: 104px;
+    }
+  }
+
   &__content {
     @include onDesktop {
       display: flex;
@@ -52,6 +58,10 @@
       margin-bottom: 64px;
     }
 
+    @include onDesktop {
+      margin-bottom: 0;
+    }
+
     &--title {
       display: flex;
       align-items: center;
@@ -103,7 +113,6 @@
     background-size: cover;
     background-position: 50%;
     min-height: 210px;
-    margin: 0 -20px 183px;
 
     @include onTablet {
       margin: 0 34px;
@@ -145,6 +154,11 @@
       top: 306px;
       padding: 0 55px;
     }
+
+    @include onDesktop {
+      top: 448px;
+      padding: 46px 56px 50px;
+    }
   }
 
   &__type-and-date {
@@ -154,6 +168,10 @@
 
     @include onTablet {
       padding: 45px 55px 0;
+    }
+
+    @include onDesktop {
+      padding: 0;
     }
 
     &--type {
