--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,11 +1,13 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  color: #0f0e08;
 
   &__body {
     &--with-menu {
+      z-index: 1;
       overflow: hidden;
+      background-color: #8b8b8c;
     }
   }
 
@@ -18,7 +20,7 @@
     transform: translateY(-100%);
     opacity: 0;
 
-    transition: opacity 0.3s;
+    transition: all 0.5s;
 
     &:target {
       opacity: 1;
