--- a/src/styles/blocks/sсhedule-and-contacts.scss
+++ b/src/styles/blocks/sсhedule-and-contacts.scss
@@ -1,5 +1,5 @@
 .schedule-and-contacts {
-  display: flex;
+  display: grid;
 
   &--title {
     font-weight: 400;
@@ -10,12 +10,6 @@
 
 .schedule {
   line-height: 150%;
-
-  @include onTablet {
-    display: grid;
-    grid-row-start: 2;
-    grid-column-end: 5;
-  }
 
   &__list {
     &--item {
@@ -33,12 +27,6 @@
 
 .contacts {
   line-height: 150%;
-  display: grid;
-
-  @include onTablet {
-    grid-row-start: 2;
-    grid-column-end: 5;
-  }
 
   &__list {
     &--item {
@@ -51,11 +39,17 @@
 }
 
 .nav {
+
   &--item {
     display: block;
+    padding-bottom: 20px;
     font-size: 16px;
     line-height: 100%;
     color: #0f0e08;
-    padding-bottom: 20px;
+    transition: all 0.3s;
+
+    &:hover {
+      color: $red;
+    }
   }
 }
