--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,6 @@
 @import "blocks/header.scss";
 @import "blocks/menu-navigation.scss";
 @import "blocks/events.scss";
-@import "blocks/galery.scss";
+@import "blocks/gallery.scss";
 @import "blocks/subscription.scss";
 @import "blocks/footer.scss"
