--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin onMobile {
-  @media (min-width: 320px) {
+  @media (min-width: 320px) and (max-width: 639px) {
     @content;
   }
 }
@@ -12,6 +12,18 @@
 
 @mixin onDesktop {
   @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin onMobileAndTablet {
+  @media (min-width: 320px) and (max-width: 1023px) {
+    @content;
+  }
+}
+
+@mixin onTabletAndDescktop {
+  @media (min-width: 640px) {
     @content;
   }
 }
