--- a/src/styles/blocks/menu-navigation.scss
+++ b/src/styles/blocks/menu-navigation.scss
@@ -1,27 +1,30 @@
 .menu__navigation {
   background-color: $green;
   position: relative;
-
-  &-flexability {
-    @include onTablet {
-      max-height: 224px;
-    }
-  }
+  z-index: 1;
 
   &--schedule {
-    padding-left: 38px;
-
     @include onTablet {
-      display: grid;
+      padding: 0 38px 10px;
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
+    }
+
+    @include onDesktop {
+      padding: 0 38px 10px;
       border-left: 1px solid rgba(255, 255, 255, 0.5);
     }
   }
 
   &--cross-btn {
+    @include hoverTransform;
     position: absolute;
     left: 20px;
     top: 27px;
-    @include hoverTransform;
+
+    @include onTablet {
+      left: 40px;
+      top: 44px;
+    }
 
     &--image {
       width: 24px;
@@ -30,8 +33,9 @@
   }
 
   &--nav {
-    padding: 28px 78px;
-    height: min-content;
+    display: grid;
+    padding: 28px 58px;
+    gap: 28px;
 
     &--item {
       color: #fff;
