--- a/src/styles/blocks/menu-navigation.scss
+++ b/src/styles/blocks/menu-navigation.scss
@@ -22,8 +22,13 @@
     top: 27px;
 
     @include onTablet {
-      left: 40px;
-      top: 44px;
+      left: 34px;
+      top: 34px;
+    }
+
+    @include onDesktop {
+      left: 50px;
+      top: 54px;
     }
 
     &--image {
@@ -34,8 +39,16 @@
 
   &--nav {
     display: grid;
-    padding: 28px 58px;
+    padding: 28px 0 0 58px;
     gap: 28px;
+
+    @include onDesktop {
+      padding: 50px 45px;
+    }
+
+    @include onTabletAndDesktop {
+      display: flex;
+    }
 
     &--item {
       color: #fff;
@@ -43,6 +56,14 @@
 
       &:hover {
         color: black;
+      }
+
+      @include onTablet {
+        padding: 12px;
+      }
+
+      @include onDesktop {
+        font-size: 22PX;
       }
     }
   }
