--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -13,10 +13,13 @@
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+    @include headOne;
 
     @include onTablet {
       justify-content: flex-start;
       margin-bottom: 48px;
+      font-size: 48px;
+      line-height: 48px;
     }
 
     @include onDesktop {
@@ -61,6 +64,12 @@
         @include onDesktop {
           height: 600px;
           margin-bottom: 30px;
+
+          transition: transform 300ms;
+
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
 
@@ -71,6 +80,12 @@
           background-size: cover;
           width: 100%;
           height: 600px;
+
+          transition: transform 300ms;
+
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
 
@@ -80,6 +95,12 @@
           background-size: cover;
           width: 100%;
           height: 600px;
+
+          transition: transform 300ms;
+
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
 
@@ -89,6 +110,12 @@
           background-size: cover;
           width: 100%;
           height: 600px;
+
+          transition: transform 300ms;
+
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
 
