--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -75,13 +75,17 @@
       }
 
       @include onDesktop {
-        margin-bottom: 80px;
+        margin: 15px auto 80px;
       }
 
       &__NAMU {
         height: 61px;
         @include onTablet {
           height: 72px;
+        }
+
+        @include onDesktop {
+          height: 100%;
         }
       }
     }
