menu task solution and input form

--- a/src/styles/blocks/sсhedule-and-contacts.scss
+++ b/src/styles/blocks/sсhedule-and-contacts.scss
@@ -34,6 +34,15 @@
         font-weight: 600;
         font-size: 14px;
       }
+
+      &--link {
+        color: #0f0e08;
+        transition: all 0.3s;
+
+        &:hover {
+          color: $red;
+        }
+      }
     }
   }
 }
