--- a/src/styles/blocks/menu-navigation.scss
+++ b/src/styles/blocks/menu-navigation.scss
@@ -5,8 +5,9 @@
 
   &--schedule {
     @include onTablet {
-      padding: 0 38px 10px;
+      padding: 0 20px 10px 30px;
       border-left: 1px solid rgba(255, 255, 255, 0.5);
+      grid-column: 5 / 6;
     }
 
     @include onDesktop {
@@ -63,7 +64,7 @@
       }
 
       @include onDesktop {
-        font-size: 22PX;
+        font-size: 22px;
       }
     }
   }
