--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/_mixins.scss";
 
-body {
-  background: $c-gray;
+@import "../styles/blocks/icon.scss";
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/grid.scss";
+@import "../styles/blocks/container.scss";
+@import "../styles/blocks/button.scss";
+@import "../styles/blocks/page.scss";
+
+* {
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ol,
+ul {
+  list-style: none;
 }
