the finishing touches

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,7 +6,7 @@
   background-size: 320px 300px;
   background-repeat: no-repeat;
   background-position: right top;
-  background-image: url(../images/header-image.png);
+  background-image: url(../photos/header-image.png);
 
   @include onTablet {
     padding: 15px 0;
