--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,5 @@
 .subscription {
-  background-image: url("../images/subscription.png");
+  background-image: url("../photos/subscription.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
