--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "utils/extends";
 @import "utils/web-slider";
 @import "utils/grid";
+@import "utils/loader";
 
 @import "blocks/page.scss";
 @import "blocks/section.scss";
