--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -20,11 +20,11 @@
     @include image;
 
     &-1 {
-      background-image: url("../images/events-1.png");
+      background-image: url("../photos/events-1.png");
     }
 
     &-2 {
-      background-image: url("../images/events-2.png");
+      background-image: url("../photos/events-2.png");
     }
   }
 
@@ -108,7 +108,7 @@
     justify-content: center;
     align-items: end;
     position: relative;
-    background-image: url(../images/events-3.png);
+    background-image: url(../photos/events-3.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
