--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -20,7 +20,7 @@
     transform: translateY(-100%);
     opacity: 0;
 
-    transition: all 0.5s;
+    transition: transform ease-in-out 0.6s, opacity ease-in-out 0.7s;
 
     &:target {
       opacity: 1;
