--- a/src/styles/utils/_web-slider.scss
+++ b/src/styles/utils/_web-slider.scss
@@ -3,15 +3,15 @@
     scrollbar-width: thin;
 
     &::-webkit-scrollbar {
-      width: 14px;
+      width: 10px;
     }
 
     &::-webkit-scrollbar-track {
-      background: $green;
+      background: #d1d6db;
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $red;
+      background-color: $green;
       border-radius: 6px;
     }
   }
