--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,18 @@
-@import "utils";
-@import "typography";
+@import"./utils";
 
-@import "blocks/page";
-@import "blocks/container";
-@import "blocks/header";
-@import "blocks/menu";
-
+@import"./blocks/header";
+@import"./blocks/button";
+@import"./blocks/subscribe";
+@import"./blocks/title";
+@import"./blocks/events";
+@import"./blocks/slider";
+@import"./blocks/logo";
+@import"./blocks/gallery";
+@import"./blocks/footer";
+@import"./blocks/contact";
+@import"./blocks/social";
+@import"./blocks/schedule";
+@import"./blocks/menu";
+@import"./blocks/icon-menu";
+@import"./blocks/page";
+@import"./blocks/container";
