--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,4 +1,3 @@
-@import "utils/vars";
-@import "utils/mixins";
-@import "utils/extends";
-@import "utils/reset";
+@import"./utils/_reset";
+@import"./utils/_mixins";
+@import"./utils/_vars";
