--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,5 +1,14 @@
 .container {
-  max-width: 320px;
-  margin: 0 auto;
+  box-sizing: content-box;
+  max-width: 1170px;
   padding: 0 20px;
+  margin: 0 auto;
+
+  @include tablet {
+    padding: 0 55px;
+  }
+
+  @include mobile {
+    padding: 0 20px;
+  }
 }
