--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,41 +1,125 @@
 .menu {
-  background-color: $color-green;
-  color: $color-white;
-  &__links {
-    display: flex;
-    gap: 33px;
-    padding: 27px 0 24px;
-    margin-bottom: 24px;
+  background-color: $green-color;
 
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0 30px;
+    color: $white-color;
+    padding: 40px 0 48px;
+    align-items: baseline;
+    overflow-y: auto;
+
+    @include tablet {
+      grid-template-columns: repeat(4, 1fr) auto auto;
+    }
+
+    @include mobile {
+      padding: 27px 0;
+      gap: 0 20px;
+    }
+  }
+
+  &__nav {
+    justify-self: center;
     font-weight: 500;
+    font-size: 22px;
     line-height: 100%;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5)
+
+    @include tablet {
+      font-size: 16px;
+    }
   }
 
-  &__section-links {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 28px;
-    row-gap: 24px;
+  &__list-media {
+    grid-column: 2 / 4;
+
+    @include tablet {
+      grid-column: 2 / 3;
+    }
+
+    @include mobile {
+      grid-column: 2 / 4;
+    }
   }
 
-  &__section-link {
-    width: 100px;
-    line-height: 100%;
+  &__list-about {
+    grid-column: 4 / 6;
+
+    @include tablet {
+      grid-column: 3 / 4;
+    }
+
+    @include mobile {
+      grid-column: 4 / 6;
+    }
+  }
+
+  &__link {
+    transition: color 0.3s;
+
+    @include hover {
+      &:hover {
+        color: $dark-color;
+      }
+    }
+  }
+
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  &__line {
+    background: rgba(255, 255, 255, 0.5);
+    width: 1px;
+    height: 100%;
+    grid-column: 7;
+    grid-row: 1 / 3;
+
+    @include tablet {
+      grid-column: 4;
+      justify-self: center;
+    }
+
+    @include mobile {
+      width: 100%;
+      height: 1px;
+      grid-column: 1 / 7;
+      grid-row: 2;
+      margin: 24px 0;
+    }
   }
 
   &__schedule {
-    padding-bottom: 27px;
+    grid-column: 8 / 10;
+    align-self: start;
+
+    @include tablet {
+      grid-column: 5 / 6;
+    }
+
+    @include mobile {
+      grid-column: 1 / 7;
+    }
   }
 
-  &__paragraph {
-    font-family: Montserrat, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
-    &--bold {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 700;
+  &__schedule-title {
+    margin-bottom: 20px;
+  }
+
+  &__schedule-off-day {
+    align-self: self-end;
+    grid-column: 10 / 12;
+    margin-top: 20px;
+    max-width: 144px;
+
+    @include tablet {
+      grid-column: 6 / 7;
+    }
+
+    @include mobile {
+      grid-column: 1 / 6;
+      max-width: 100%;
     }
   }
 }
