--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,30 +1,30 @@
 .page {
-  font-family: 'IBM Plex Sans', sans-serif;
-  color: $color-grey;
   scroll-behavior: smooth;
-
-  &__body {
-    &--with-menu {
-      overflow: hidden;
-    }
-  }
-
-  &__header {
-    margin-bottom: 20px;
-  }
+  font-family: "IBM Plex Sans", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  background-color: $white-color;
+  color: $dark-color;
 
   &__menu {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     transition: transform 0.3s;
 
     &:target {
-      transform: translateX(0);
+      transform: translateY(0);
     }
+  }
 
+  &__body {
+    margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.25);
+    }
   }
 }
