--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,21 +1,17 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
-}
-
-@mixin onTablet() {
-  @media (min-width: 768px) {
+@mixin tablet {
+  @media(max-width: 1279px) {
     @content;
   }
 }
 
-@mixin onDesktop() {
-  @media (min-width: 1280px) {
+@mixin mobile {
+  @media(max-width: 767px) {
     @content;
   }
 }
 
-
-
+@mixin hover {
+  @media(any-hover: hover) {
+    @content;
+  }
+}
