--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,10 +1,16 @@
-body,
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
-h3,
-p,
-ul {
+h3 {
   margin: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -12,7 +18,18 @@ a {
   color: inherit;
 }
 
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+}
+
+address {
+  font-style: normal;
 }
