--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,7 @@
-$color-black: #0F0E08;
-$color-green: #1A5A4C;
-$color-white: #fff;
-$color-grey: #4E4E4E;
-
+$white-color: #fff;
+$grey-color: #e0e0e0;
+$dark-grey-color: #4e4e4e;
+$green-color: #1a5a4c;
+$red-color: #f14a27;
+$dark-color: #0f0e08;
+$black-color: #000;
