--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "../styles/utils/mixins";
+@import "../styles/utils/vars";
+@import "../styles/blocks/page";
+@import "../styles/blocks/header";
+@import "../styles/blocks/menu";
+@import "../styles/blocks/events";
+@import "../styles/blocks/galerie";
+@import "../styles/blocks/slider";
+@import "../styles/blocks/subscribe";
+@import "../styles/blocks/footer";
+@import "../styles/blocks/btn";
