--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/arc.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/logo.scss";
