--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -212,8 +212,17 @@
   }
 
   &__contact {
-    @include desc;
-    line-height: 150%;
-    color: $main-color-title;
+    &-link {
+      text-decoration: none;
+      @include desc;
+      line-height: 150%;
+      color: $main-color-title;
+      transition: all 0.3s ease;
+
+      &:hover {
+        font-weight: bold;
+        color: grey;
+      }
+    }
   }
 }
