--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -20,10 +20,27 @@
   }
 
   &--cross {
+    top: 0;
+    position: absolute;
     background: url(/images/cross.svg);
     display: block;
     width: 12px;
     height: 18px;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-decoration: none;
+
+    @include onMobile {
+      margin-top: 33px;
+    }
+
+    @include onDesktop {
+      margin-top: 45px;
+    }
+
+    @include onDesktop {
+      margin-top: 45px;
+    }
   }
 }
 
