--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,9 @@
 @import "../styles/blocks/container.scss";
 @import "../styles/blocks/button.scss";
 @import "../styles/blocks/page.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/work.scss";
+@import "../styles/blocks/nav.scss";
 
 * {
   padding: 0;
