--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -15,4 +15,22 @@
     height: 655px;
     max-width: 1170px;
   }
+
+  &__menu {
+    margin: 0 auto;
+
+    @include onMobile {
+      height: 399px;
+      max-width: 280px;
+    }
+    @include onTablet {
+      height: 225px;
+      max-width: 690px;
+    }
+
+    @include onDesktop {
+      height: 233px;
+      max-width: 1170px;
+    }
+  }
 }
