--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,6 @@
 @import "utils/variables";
 @import "utils/mixins";
+@import "./blocks/grid.scss";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
