header without menu finished

--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,6 +1,11 @@
 .logo {
   &__image {
-    width: 55px;
+    width: 61px;
     height: 61px;
+
+    @include onTablet {
+      width: 72px;
+      height: 72px;
+    }
   }
 }
