--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,7 +1,9 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  gap:28px;
+  width: 228px;
+  height: 60px;
+  gap: 28px;
   flex-wrap: wrap;
 
   &__link {
