--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -6,6 +6,12 @@
   border-top: 1px solid #fff;
   padding: 24px 0 0;
 
+  @include onTablet {
+    border-top: 0;
+    border-left: 1px solid #fff;
+    padding: 0 24px 0;
+  }
+
   &__title {
     text-transform: capitalize;
     font-weight: 400;
