--- a/src/styles/blocks/button-tickets.scss
+++ b/src/styles/blocks/button-tickets.scss
@@ -1,9 +1,13 @@
 .button-tickets {
   display: flex;
   box-sizing: border-box;
-  width: 280px;
   height: 50px;
   border: 1px solid $mainGreen;
+
+  @include onTablet {
+    width: 270px;
+    height: 70px;
+  }
 
   &__link {
     flex-grow: 1;
@@ -23,6 +27,11 @@
     height: 49px;
     border: 0;
     background-color: $mainGreen;
+
+    @include onTablet {
+      width: 69px;
+      height: 69px;
+    }
   }
 
   &__arrow-image {
