--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,12 +2,11 @@
   margin: 0 auto;
   padding: 0 20px 0;
 
-  // @include onTablet {
-  //   max-width: 600px;
-  // }
+  @include onTablet {
+    padding: 0 40px 0;
+  }
 
-  // @include onDesktop {
-  //   padding: 0 40px;
-  //   max-width: 1020px;
-  // }
+  @include onDesktop {
+    padding: 0 60px;
+  }
 }
