--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,9 +4,11 @@
 
   @include onTablet {
     padding: 0 40px 0;
+    margin: 0;
   }
 
   @include onDesktop {
     padding: 0 60px;
+    margin: 0;
   }
 }
