--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,4 +1,6 @@
 .schedule {
+  display: flex;
+  flex-direction: column;
   font-family: "IBM Plex Sans";
   font-size: 14px;
   line-height: 140.62%;
@@ -7,9 +9,15 @@
   padding: 24px 0 0;
 
   @include onTablet {
+    flex-direction: row;
     border-top: 0;
-    border-left: 1px solid #fff;
-    padding: 0 24px 0;
+    border-left: 1px solid #fff ;
+    padding: 0 38px 0;
+  }
+
+  &__weekdays {
+    min-width: 160px;
+    margin-right: 38px;
   }
 
   &__title {
@@ -22,10 +30,18 @@
   &__days {
     margin-bottom: 20px;
     font-weight: 400;
+
+
   }
 
   &__time {
     font-weight: 600;
     margin-right: 8px;
+  }
+
+  &__weekends {
+    @include onTablet {
+      margin-top: 40px;
+    }
   }
 }
