--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,7 +4,15 @@
   &__top-actions {
     position: absolute;
 
-    margin: 33px 20px;
+    margin: 33px 0 0 20px;
+
+    @include onTablet {
+      margin: 39px 0 0 34px;
+    }
+
+    @include onDesktop {
+      margin: 39px 0 0 55px;
+    }
   }
 
   &__menu-opener {
@@ -12,5 +20,88 @@
 
     display: block;
     background-image: url(../images/icons/menu.svg);
+  }
+
+  &__bg {
+    box-sizing: border-box;
+    height: 300px;
+    width: 100vw;
+
+    background-image: url(../images/header_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    padding-top: 9px;
+
+    @include onTablet {
+      left: 110px;
+
+      padding-top: 15px;
+    }
+
+    @include onDesktop {
+      left: 85px;
+    }
+  }
+
+  &__page-tittle {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 45px;
+
+    text-transform: uppercase;
+    text-align: center;
+
+    @include onTablet {
+      font-size: 54px;
+      line-height: 65px;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      line-height: 86px;
+    }
+  }
+
+  &__header-tickets {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  &__buy-tittle {
+    display: inline-block;
+    box-sizing: border-box;
+
+    width: 100%;
+    height: 50px;
+
+    padding: 18px 0;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-align: center;
+
+    border: 1px solid $mainGreenColor;
+  }
+
+  &__buy-button {
+    display: inline-block;
+
+    width: 50px;
+    height: 50px;
+
+    background-color: $mainGreenColor;
   }
 }
