--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,9 @@
 .page {
+  font-family: "IBM Plex Sans", serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+
   &__body {
     margin: 0;
   }
