bug fix update 3

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,6 +1,17 @@
 .menu {
   background: $main-color;
 
+  &__background {
+    &-is--active {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0,0,0,0.75);
+    }
+  }
+
   &__cross {
     transition: all 0.3s ease;
 
