--- a/src/styles/blocks/button-tickets.scss
+++ b/src/styles/blocks/button-tickets.scss
@@ -3,6 +3,11 @@
   box-sizing: border-box;
   height: 50px;
   border: 1px solid $mainGreen;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
 
   @include onTablet {
     width: 270px;
@@ -27,6 +32,8 @@
     height: 49px;
     border: 0;
     background-color: $mainGreen;
+
+
 
     @include onTablet {
       width: 69px;
