--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,11 +18,12 @@
 
   &__container {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
+    flex-direction: column;
 
     @include onTablet {
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
@@ -37,6 +38,14 @@
     @include onTablet {
       margin-right: 44px;
     }
+
+    @include onDesktop {
+      margin-right: 108px;
+    }
+  }
+
+  &__nav {
+    margin-right: 38px;
   }
 
   &__content {
