--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -72,15 +72,22 @@
     }
   }
 
-  &__header-tickets {
+  &__buy-tickets {
+    padding: 0 20px;
+
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
+
+    align-items: center;
   }
 
   &__buy-tittle {
-    display: inline-block;
+    display: grid;
     box-sizing: border-box;
+    flex-grow: 2;
+    justify-content: center;
+    justify-items: center;
 
     width: 100%;
     height: 50px;
@@ -92,15 +99,31 @@
     line-height: 16px;
     text-transform: uppercase;
     text-align: center;
+    text-decoration: none;
 
     border: 1px solid $mainGreenColor;
   }
 
   &__buy-button {
-    display: inline-block;
+    box-sizing: border-box;
+    display: grid;
+    flex-grow: 1;
+    justify-content: center;
+    justify-items: center;
 
     width: 50px;
     height: 50px;
+
+    padding: 18px 0;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+
+    color: #fff;
 
     background-color: $mainGreenColor;
   }
