--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,17 +2,14 @@
   margin: 0 auto;
 
   @include onMobile {
-    height: 300px;
     max-width: 280px;
   }
 
   @include onTablet {
-    height: 384px;
     max-width: 690px;
   }
 
   @include onDesktop {
-    height: 655px;
     max-width: 1170px;
   }
 
@@ -21,16 +18,16 @@
 
     @include onMobile {
       height: 399px;
-      max-width: 280px;
+      min-width: 280px;
     }
     @include onTablet {
       height: 225px;
-      max-width: 690px;
+      min-width: 690px;
     }
 
     @include onDesktop {
-      height: 233px;
-      max-width: 1170px;
+      height: 30%;
+      min-width: 1170px;
     }
   }
 }
