--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,8 @@
 @import "../styles/blocks/menu.scss";
 @import "../styles/blocks/work.scss";
 @import "../styles/blocks/nav.scss";
+@import "../styles/blocks/footer.scss";
+@import "../styles/blocks/logo.scss";
 
 * {
   padding: 0;
@@ -18,4 +20,8 @@
 ol,
 ul {
   list-style: none;
+}
+
+p {
+  margin: 0;
 }
