--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2,130px);
+  grid-template-columns: repeat(2,1fr);
   column-gap: 20px;
 
   @include onTablet {
@@ -9,7 +9,7 @@
   }
 
   @include onDesktop {
-    grid-template-columns: repeat(12,70px);
+    grid-template-columns: repeat(12,1fr);
     column-gap: 30px;
   }
 
