--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -10,7 +10,7 @@
       margin-top: 33px;
     }
 
-    @include onDesktop {
+    @include onTablet {
       margin-top: 45px;
     }
 
@@ -42,10 +42,4 @@
       margin-top: 45px;
     }
   }
-}
-
-.logo__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
