--- a/src/styles/blocks/work.scss
+++ b/src/styles/blocks/work.scss
@@ -2,17 +2,14 @@
 
   @include onTablet {
     padding-left: 38px;
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
   }
 
   @include onDesktop {
     padding-left: 102px;
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
   }
 
   &__title {
     margin: 24px 0 20px;
-
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -23,6 +20,19 @@
 
     @include onTablet {
       margin: 0 0 20px;
+    }
+
+    @include onDesktop {
+      margin: 0 0 20px;
+    }
+
+    &--footer {
+      color: #0f0e08;
+      font-size: 14px;
+      line-height: 140.62%;
+      margin-top: 0;
+      margin-bottom: 20px;
+      font-weight: 400;
     }
   }
 
@@ -39,6 +49,13 @@
       flex-direction: row;
       gap: 30px;
     }
+
+    &--footer {
+      color: #0f0e08;
+      flex-direction: column;
+      font-size: 14px;
+      line-height: 150%;
+    }
   }
 
   &__schedule {
@@ -46,17 +63,26 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     line-height: 21px;
-
     color: #fff;
 
     @include onTablet {
       margin: 0;
       width: 158px;
-
     }
 
     @include onDesktop {
       width: 170px;
+    }
+
+    &--footer {
+      font-size: 14px;
+      line-height: 21px;
+      color: black;
+    }
+
+    &--bottom {
+      margin-top: 20px;
+      display: block;
     }
   }
 
