--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,14 +1,15 @@
 @mixin onMobile {
-  @media (min-width: 320px) {
+  @media (min-width: 320px) and (max-width: 767px) {
     @content;
   }
 }
 
 @mixin onTablet {
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (max-width: 1023px) {
     @content;
   }
 }
+
 @mixin onDesktop {
   @media (min-width: 1024px) {
     @content;
