--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -89,6 +89,14 @@
     &__NAMU {
       width: 62px;
       height: 72px;
+
+      @include onTablet {
+        width: 98px;
+      }
+
+      @include onDesktop {
+        width: 62px;
+      }
     }
   }
 
