--- a/src/styles/utils/_header-menu.scss
+++ b/src/styles/utils/_header-menu.scss
@@ -183,7 +183,7 @@
       @include schedule;
       font-weight: 400;
       line-height: 21px;
-      width: 280px;
+      max-width: 280px;
 
       @include onTablet {
         margin-top: 40px;
