--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,30 +6,42 @@
   row-gap: 5px;
 
   @include onTablet {
-    // column-gap: 40px;
     row-gap: 5px;
   }
 
   @include onDesktop {
-    // column-gap: 180px;
     row-gap: 30px;
+    font-size: 22px;
+  }
+
+  &--footer {
+    @include onDesktop {
+      row-gap: 0;
+    }
   }
 
   &__link {
     text-transform: capitalize;
-    color: #fff;
+    color: $mainWhite;
     font-family: "IBM Plex Sans";
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
     transition: color 0.3s;
+    cursor: pointer;
 
-    &:hover {
+    &--footer{
       color: $mainBlack;
-    }
+      font-weight: 400;
 
-    @include onDesktop {
-      font-size: 22px;
+      &:hover {
+        color: $mainGreen;
+      }
+
+      @include onDesktop {
+        font-weight: 400;
+
+      }
     }
   }
 }
