--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,9 +9,9 @@
   &__body {
     box-sizing: border-box;
 
-    &--with-menu {
-      overflow: hidden;
-    }
+    // &--with-menu {
+    //   overflow: hidden;
+    // }
 
   }
 
