--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -4,19 +4,16 @@
   font-family: "IBM Plex Sans";
   font-size: 14px;
   line-height: 140.62%;
-  color: #fff;
-  border-top: 1px solid #fff;
+  color: $mainWhite;
   padding: 24px 0 0;
 
   @include onTablet {
     flex-direction: row;
     border-top: 0;
-    border-left: 1px solid #fff ;
     padding: 0 38px 0;
   }
 
   &__weekdays {
-    min-width: 160px;
     margin-right: 38px;
   }
 
@@ -30,8 +27,6 @@
   &__days {
     margin-bottom: 20px;
     font-weight: 400;
-
-
   }
 
   &__time {
@@ -43,6 +38,16 @@
     min-width: 160px;
     @include onTablet {
       margin-top: 40px;
+    }
+  }
+
+  &--footer {
+    color: $mainBlack;
+    padding: 0;
+    margin-bottom: 64px;
+
+    @include onTablet {
+      flex-direction: column;
     }
   }
 }
