--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,7 +4,7 @@
   &__background {
     width: 100%;
     height: 300px;
-    position: fixed;
+    position: absolute;
     left: 0;
     right: 0;
     top: 0;
