--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -11,7 +11,6 @@
     box-sizing: border-box;
 
     @include onTablet {
-
       height: 230px;
     }
   }
@@ -29,7 +28,13 @@
 
   &__top {
     display: flex;
-    margin-bottom: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid $mainWhite;
+
+    @include onTablet {
+      border-bottom: none;
+      border-right: 1px solid $mainWhite;
+    }
   }
 
   &__icon {
