--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -20,13 +20,13 @@
 
       @include onTablet {
         width: 42%;
-        height: 550px;
+        height: 100%;
         margin-bottom: 88px;
       }
 
       @include onDesktop {
         width: 58%;
-        height: 655px;
+        height: 100%;
       }
     }
 
@@ -54,6 +54,8 @@
 
       @include onTablet {
         margin: 15px 0 0 35px;
+        width: min-content;
+        height: min-content;
       }
 
       @include onDesktop {
