--- a/src/styles/utils/_events.scss
+++ b/src/styles/utils/_events.scss
@@ -43,10 +43,13 @@
       &__photo {
         width: 100%;
 
-        transition: transform 300ms;
+        &--hover {
 
-        &:hover {
-          transform: scale(1.1);
+          transition: transform 300ms;
+
+          &:hover {
+            transform: scale(1, 1.1);
+          }
         }
       }
     }
