--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   &__background {
+    box-sizing: border-box;
     width: 100%;
     height: 300px;
     position: absolute;
@@ -21,7 +22,7 @@
     }
 
     @include onDesktop {
-      width: 60%;
+      width: 50%;
       height: $headerDesktopHeight;
     }
   }
