--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -10,11 +10,16 @@
   @include onTablet {
     flex-direction: row;
     border-top: 0;
-    padding: 0 38px 0;
+    padding: 0 0 0 38px ;
   }
 
   &__weekdays {
+    box-sizing: border-box;
     margin-right: 38px;
+
+    @include onTablet {
+      margin-right: 10px;
+    }
   }
 
   &__title {
@@ -27,6 +32,10 @@
   &__days {
     margin-bottom: 20px;
     font-weight: 400;
+
+    @include onTablet {
+      min-width: 170px;
+    }
   }
 
   &__time {
