--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import "./blocks/nav.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/button-subscription.scss";
