--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -13,4 +13,17 @@
   &--menu-closer {
     background-image: url(/src/images/menu-closer.svg);
   }
+
+  &--facebook {
+    background-image: url(/src/images/Facebook.svg);
+    width: 24px;
+    height: 24px;
+    margin-right: 25px;
+  }
+
+  &--instagram {
+    background-image: url(/src/images/instagram-3.svg);
+    width: 24px;
+    height: 24px;
+  }
 }
