--- a/src/styles/blocks/nav-block.scss
+++ b/src/styles/blocks/nav-block.scss
@@ -1,5 +1,17 @@
 .nav-block {
 
+  &--footer {
+    margin-bottom: 80px;
+
+    @include onTablet {
+      margin-bottom: 120px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0px;
+    }
+  }
+
   &__list {
     margin: 0;
     padding: 0;
@@ -22,6 +34,21 @@
 
     &:last-child {
       margin: 0;
+    }
+
+    &--footer {
+      color: #0F0E08;
+      flex-basis: 130px;
+      flex-grow: 1;
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      @include onDesktop {
+        margin-right: 30px;
+      }
     }
   }
 
@@ -46,6 +73,12 @@
 
     @include onDesktop {
       font-size: 22px;
+    }
+
+    &--footer {
+      font-weight: 400;
+      font-size: 14px;
+      color: #0F0E08;
     }
   }
 }
