--- a/src/styles/blocks/schedule-block.scss
+++ b/src/styles/blocks/schedule-block.scss
@@ -4,6 +4,21 @@
   font-size: 14px;
   color: #FFFFFF;
 
+  &--footer {
+    color: #0F0E08;
+    flex-basis: 130px;
+    flex-grow: 1;
+    margin-right: 20px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    @include onDesktop {
+      margin-right: 30px;
+    }
+  }
+
   &__title {
     margin-bottom: 20px;
   }
@@ -15,6 +30,10 @@
     @include onTablet {
       flex-direction: row;
     }
+
+    &--footer {
+      flex-direction: column;
+    }
   }
 
   &__time {
@@ -22,12 +41,17 @@
     margin: 0 0 16px;
 
     @include onTablet {
-      width: 160px;
+      // width: 160px;
       margin: 0 38px 0 0;
     }
 
     @include onDesktop {
-      width: 170px;
+      // width: 170px;
+    }
+
+    &--footer {
+      width: 100%;
+      margin: 0 0 16px;
     }
   }
 
@@ -35,11 +59,16 @@
     line-height: 150%;
 
     @include onTablet {
-      width: 145px;
+      flex-basis: 145px;
     }
 
     @include onDesktop {
-      width: 170px;
+      flex-basis: 170px;
+    }
+
+    &--footer {
+      margin: 0;
+      width: 100%;
     }
   }
 }
