--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import "./blocks/menu.scss";
 @import "./blocks/nav-block.scss";
 @import "./blocks/schedule-block.scss";
+@import "./blocks/footer.scss";
