--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -62,6 +62,15 @@
 
   &__left-block {
     display: flex;
+    height: 100%;
+
+    @include onTablet {
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
+    }
+
+    @include onDesktop {
+      border-right: none;
+    }
   }
 
   &__right-block {
@@ -70,11 +79,11 @@
 
     @include onTablet {
       border-top: none;
-      border-left: 1px solid rgba(255, 255, 255, 0.5);
-      padding: 0 0 0 36px;
+      padding: 0;
     }
 
     @include onDesktop {
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
       padding: 0 0 0 100px;
     }
   }
