--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -32,6 +32,7 @@
 
     &__container {
       display: flex;
+      justify-content: flex-start;
       margin: 0 23px;
       line-height: 61px;
 
@@ -49,7 +50,7 @@
     }
 
     &__link {
-      margin: 9px 91px 0 0;
+      margin: 9px 27% 0 0;
       z-index: 1;
 
       @include onTablet {
