--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -35,6 +35,7 @@
     @include onTablet {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       justify-content: flex-start;
       margin-bottom: 0;
     }
@@ -56,7 +57,6 @@
 
       &:hover {
         background-image: url(../images/signs/fb_hover.png);
-        background-repeat: no-repeat;
         width: 25px;
         height: 25px;
       }
@@ -89,14 +89,6 @@
     &__NAMU {
       width: 62px;
       height: 72px;
-
-      @include onTablet {
-        width: 98px;
-      }
-
-      @include onDesktop {
-        width: 62px;
-      }
     }
   }
 
