layout exhibitions/lecture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,6 @@
 @import "./blocks/footer.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/button-subscription.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lection.scss";
