--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,4 +3,5 @@ $mainGreen: #1a5a4c;
 $mainWhite: #fff;
 $buttonSubscription: #f14a27;
 $placeholderColor: #687480;
+$eventDescriptionColor: #4e4e4e;
 $headerDesktopHeight: 655px;
