--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -31,6 +31,10 @@
   &__section {
     margin-bottom: 200px;
 
+    &--events{
+      margin-bottom: 104px;
+    }
+
     &--lection {
       margin-bottom: 380px;
     }
