--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -38,8 +38,8 @@
   }
 
   &__content {
-    width:100%;
-    height: $headerDesktopHeight;
+    width: 100%;
+    // height: $headerDesktopHeight;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -119,14 +119,10 @@
   }
 
   &__button {
-    margin-bottom: 70px;
-
     @include onDesktop {
       display: flex;
       justify-content: right;
       margin-right: 30px;
     }
   }
-
-
 }
