--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,7 +12,6 @@
     // &--with-menu {
     //   overflow: hidden;
     // }
-
   }
 
   &__menu {
@@ -29,9 +28,17 @@
   }
 
   &__section {
-    margin-bottom: 200px;
+    margin-bottom: 88px;
 
-    &--events{
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+
+    &--header {
+      margin-bottom: 104px;
+    }
+
+    &--events {
       margin-bottom: 104px;
     }
 
