footer done + arrow added

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -25,11 +25,20 @@
     justify-content: end;
   }
 
+  &__up-arrow {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
   &__description {
     display: flex;
     box-sizing: content-box;
 
-    padding-bottom: 70px;
     margin-bottom: 40px;
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
@@ -77,6 +86,5 @@
   &__authors-description {
     margin-bottom: 10px;
   }
+
 }
-
-
