--- a/src/styles/blocks/schedule-block.scss
+++ b/src/styles/blocks/schedule-block.scss
@@ -41,17 +41,16 @@
     margin: 0 0 16px;
 
     @include onTablet {
-      // width: 160px;
       margin: 0 38px 0 0;
-    }
-
-    @include onDesktop {
-      // width: 170px;
     }
 
     &--footer {
       width: 100%;
       margin: 0 0 16px;
+    }
+
+    &--footer-arrow {
+      margin-bottom: 150px;
     }
   }
 
