--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -26,4 +26,10 @@
     width: 24px;
     height: 24px;
   }
+
+  &--up-arrow {
+    background-image: url(/src/images/Arrow-up.svg);
+    width: 50px;
+    height: 50px;
+  }
 }
