--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,29 @@
 @import "fonts";
 @import "typography";
 
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/container-wrap.scss";
+@import "blocks/top-action.scss";
+@import "blocks/title.scss";
+@import "blocks/menu.scss";
+@import "blocks/work-shelude.scss";
+@import "blocks/work-description.scss";
+@import "blocks/list-navigation.scss";
+@import "blocks/grid.scss";
+@import "blocks/footer.scss";
+@import "blocks/social-icon.scss";
+@import "blocks/art-museum.scss";
+@import "blocks/body.scss";
+@import "blocks/event.scss";
+@import "blocks/current-events.scss";
+@import "blocks/lection.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slider.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/form.scss";
+
 body {
   background: $c-gray;
+  margin: 0;
 }
