--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -23,7 +23,7 @@
 
     @include onDesktop {
       width: 50%;
-      height: $headerDesktopHeight;
+      height: 665px;
     }
   }
 
@@ -39,7 +39,6 @@
 
   &__content {
     width: 100%;
-    // height: $headerDesktopHeight;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
