fixed hover links

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -30,6 +30,10 @@
     transition: color 0.3s;
     cursor: pointer;
 
+    &:hover {
+      color: $mainBlack;
+    }
+
     &--footer{
       color: $mainBlack;
       font-weight: 400;
