--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "variables";
+@import "mixin";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/grid";
+@import "blocks/button";
+@import "blocks/menu";
+@import "blocks/ivent";
+@import "blocks/galery";
+@import "blocks/swiper";
+@import "blocks/subscribe";
+@import "blocks/form";
+
+@import "blocks/footer";
